# snakefish

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  dev_doc.md  man.txt
bench/algs/: bench.py  bench_res.txt  bench_run.txt
bench/algs/closest_pair/: closest_pair_of_points.py
bench/algs/edge_detection/: convolve.py
bench/algs/edge_detection/data/: readme.txt
bench/algs/max_sum/: max_subarray_sum.py
bench/micro/: bench_run.txt
bench/real/: bench.py
bench/report/: bench_res_real.txt  malmut.rep
benchmark/: Makefile  README.md  analysis.R  bench.py  validation.py
benchmark/benchmarksgame/: binary_tree.py  fannkuch.py  fasta.py  knucleotide.py  mandelbrot.py  regexredux.py  spectralnorm.py
benchmark/multiprocessing/: binary_tree.py  fannkuch.py  fasta.py  knucleotide.py  mandelbrot.py  regexredux.py  spectralnorm.py  wrappers.py
benchmark/output/: mandelbrot-output.txt
benchmark/sequential/: binary_tree.py  fannkuch.py  fasta.py  knucleotide.py  mandelbrot.py  regexredux.py  spectralnorm.py
benchmark/snakefish/: binary_tree.py  fannkuch.py  fasta.py  knucleotide.py  mandelbrot.py  regexredux.py  spectralnorm.py
example/generator/: generator.py
example/pass_cracker/: input1.txt
example/porpals/: porp_example.py
example/write/: test.txt
examples/: Makefile  README.md  channel.py  fork_join.py  fork_tryjoin.py  generator.py  generator_exception.py  map.py  thread_exception.py  timestamp.py
examples/multiprocessing/: README.md  channel.py  fork_join.py  fork_tryjoin.py  generator.py  generator_exception.py  map.py  thread_exception.py  timestamp.py  wrappers.py
labratory/globals/: porpals.py
labratory/porpoise/: cporpoise.cc
old/: Makefile  README.md
old/bench/algs/edge_detection/: canny.py  sobel_filter.py
old/bench/micro/: bench_res.txt
old/bench/micro/flt/: flt.py
old/bench/micro/matrix/: matrix.py
old/bench/micro/vml/: vml.py
old/bench/real/: bench_res.txt
old/bench/real/regex_dna/: bm_regex_dna.py
old/bench/real/regex_v8/: bm_regex_v8.py
old/bench/report/: bench_res_algs.txt  bench_res_micro.txt
old/example/malmut/: malmut.py
old/example/pass_cracker/: input2.txt  pass_cracker.py
old/example/write/: write.py
old/labratory/io/: io.c
old/labratory/porpoise/: Makefile  porpoise.py  worker.py
old/labratory/porpoise/dynamics/: logger.cc
old/policy/: IO.txt
old/src/fake_process_porpoise/: porpoise.py
old/src/porpoise/: cporpoise.cc  porpals.py  porpoise.py
policy/: Globals.txt
src/: Makefile  buffer.cpp  buffer.h  channel.cpp  channel.h  generator.cpp  generator.h  misc.cpp  misc.h  semaphore_t.cpp  semaphore_t.h  shared_buffer.cpp  shared_buffer.h  snakefish.cpp  snakefish.h  thread.cpp  thread.h  util.h
src/fake_porpoise/: porpoise.py
src/fake_process_porpoise/: porpals.py
src/fake_threaded_porpoise/: porpoise.py
src/porpoise/: Makefile  worker.py
src/tests/: channel_tests.h  main.cpp  shared_buffer_tests.h  test_util.h  util.h
